# music_player

./: .gitignore  Cargo.toml  README.md  default.nix  rustfmt.toml
src/: environment.rs  init.rs  main.rs  run.rs
src/config/: conf_color.rs  conf_logs.rs  conf_theme.rs  mod.rs
src/enums/: enum_input.rs  enum_navigate.rs
src/functions/: functions_hash.rs
src/globals/: playback_state.rs  terminal_state.rs
src/state/: state_app.rs  state_config.rs  state_interface.rs  state_library.rs  state_playlist.rs
src/tasks/: listener_input.rs  listener_playback.rs  listener_render_delay.rs  listener_scanner.rs  listener_state.rs  listener_tui.rs  listener_updater.rs  loop_intervals.rs  loop_tui.rs
src/traits/: trait_input.rs  trait_listable.rs
src/types/: config.rs  types_library_entry.rs  types_msg_channels.rs  types_style.rs  types_tui.rs
src/ui/models/: model_component_list_state.rs
src/ui/utils/: ui_loading_icon_util.rs  ui_text_util.rs  ui_time_util.rs
src/ui/views/: view_library.rs
src/ui/widgets/: widget_playback_status.rs
