[package]
name = "music_player"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1
lto = "thin"

[profile.release]
opt-level = 2
codegen-units = 1
lto = true

[dependencies]
color-eyre = "0.6.3"
lofty = "0.22.1" # metadata parser
crossterm = "0.28.1"
awedio = '0.4.0' # audio playback
static_init = "1.0.3"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
rayon = "1.10.0"
unicode-width = {version = "0.2.0", default-features = false}
mimalloc = "0.1"
arrayvec = "0.7.6"
strum = "0.26"
strum_macros = "0.26"
crossbeam-channel = "0.5.14"
directories = "6.0.0"
toml = "0.8.20"
serde = { version = "1.0", features = ["derive"] }
itoa = "1.0.14"

[dev-dependencies]
pretty_assertions = "1.4.0"
