[package]
name = "music_player"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1 # 0 makes loading of tracks really slow

[profile.release]
opt-level = 2
codegen-units = 1
lto = true

[dependencies]
color-eyre = "0.6.5"
color-backtrace = "0.7.0"
backtrace = "0.3.75"
lofty = "0.22.4" # metadata parser
crossterm = "0.29.0"
awedio = '0.5.0' # audio playback
static_init = "1.0.4"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
rayon = "1.10.0"
unicode-width = {version = "0.2.1", default-features = false}
mimalloc = "0.1"
arrayvec = "0.7.6"
strum = "0.27"
strum_macros = "0.27"
crossbeam-channel = "0.5.15"
directories = "6.0.0"
toml = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
itoa = "1.0.15"

[dev-dependencies]
pretty_assertions = "1.4.1"
